# jm-boom

./: .dockerignore  .env.example  .gitignore  .oxfmtrc.json  .oxlintrc.json  AGENTS.MD  Dockerfile  FRONTEND-SUMMARY.MD  MIGRATION.md  QUICKSTART.md  README.md  STATUS.md  SUMMARY.MD  docker-compose.yml  package.json  tsconfig.json  vite.config.ts
.claude/memory/: MEMORY.md  next-steps-core-migration.md  next-steps-endpoint-architecture.md  phase1-complete.md
.github/: cliff.toml
.github/workflows/: docker-publish.yml  release.yml
docs/: endpoint-architecture.md  phase1-summary.md
docs/release-notes/: v0.4.3.md  v0.4.5.md  v0.4.6.md
server/: Cargo.toml  README.md
server/migrations/: 001_init.sql  002_endpoint_settings.sql  003_download_tasks.sql  004_download_manifests.sql  005_download_manifest_completion.sql  006_favorites.sql  007_reading_history.sql  008_jm_account.sql
server/src/: config.rs  download.rs  endpoint.rs  expiring_cache.rs  http_error.rs  image_work.rs  keyed_lock.rs  lib.rs  main.rs  page_materializer.rs
server/src/api/: auth.rs  comic_dto.rs  comic_summary.rs  comics.rs  covers.rs  downloads.rs  favorites.rs  history.rs  home.rs  media.rs  mod.rs  reader.rs  search.rs  settings.rs  source_api.rs  sources.rs
server/src/application/: access_gate.rs  account.rs  comic.rs  cover.rs  download.rs  favorite.rs  history.rs  mod.rs  reader.rs  settings.rs
server/src/application/comic/: comments.rs  mod.rs  search.rs
server/src/application/comic/home/: mod.rs  payload.rs  section.rs
server/src/bootstrap/: config.rs  router.rs  state.rs
server/src/cache/: maintenance.rs  mod.rs  repository.rs  storage.rs  tests.rs
server/src/domain/: comic.rs  mod.rs  reader.rs
server/src/download/: error.rs  manager.rs  mod.rs  model.rs  repository.rs  scheduler.rs  state.rs  storage.rs  worker.rs
server/src/endpoint/: discovery.rs  failover.rs  mod.rs  probe.rs  repository.rs  tests.rs
server/src/jm/: auth.rs  chapter.rs  client.rs  crypto.rs  error.rs  mod.rs  models.rs  serde_ext.rs  setting.rs  signature.rs
server/src/reader/: decoder.rs  descramble.rs  mod.rs  page.rs  preloader.rs  webp_encoder.rs
server/src/source/: catalog.rs  list.rs  mod.rs  package.rs  protocol.rs  registry.rs  service.rs
server/src/source/runtime/: bridge.rs  mod.rs  store.rs
server/src/source/runtime/host/: canvas.rs  defaults.rs  env.rs  html.rs  mod.rs  net.rs  std.rs
server/src/storage/: mod.rs
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: api.rs  download.rs  lib.rs  main.rs  plugin_codec.rs  reader.rs
src-tauri/src/api/: client.rs  home.rs  models.rs
src-tauri/src/download/: manager.rs  paths.rs  storage.rs
src-tauri/src/storage/: db.rs  migrations.rs
src/components/: comic-cover.tsx  comic-feed.tsx  overflow-tooltip.tsx  page-header.tsx
src/components/comic/: index.ts
src/components/comic-feed/: comic-grid-skeleton.tsx  comic-grid.tsx  feed-header.tsx  state-panel.tsx
src/features/comic-detail/: chapters.tsx  hero.tsx  page.tsx  related.tsx  utils.ts
src/features/downloads/: download-empty-state.tsx  download-task-card.tsx  page.tsx
src/features/history/: history-card.tsx
src/features/home/: back-top.tsx  home-directory.tsx  home-feed-sections.tsx  home-feed-skeleton.tsx  home-utils.ts  page.tsx
src/features/reader/: constants.ts  (+11 more)
src/stores/: reading-history-store.ts  settings-store.ts
src/styles/: globals.css
web/: .env.development  .env.production  .oxfmtrc.json  .oxlintrc.json  index.html  package.json  vite.config.ts
web/src/: main.tsx  routeTree.gen.ts
(+182 files in other folders)
