[package]
name = "jm-boom-server"
version = "0.6.0"
edition = "2021"

[dependencies]
# Web 框架
axum = "0.7"
tower-http = { version = "0.5", features = ["fs", "cors", "trace", "compression-gzip"] }
tokio = { version = "1", features = ["full"] }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 数据库
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "migrate"] }

# HTTP 客户端（复用现有依赖）
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# 加密解密
aes = "0.8"
base64 = "0.22"
ecb = { version = "0.1", features = ["alloc", "block-padding"] }
md5 = "0.7"

# 图片处理
image = { version = "0.25", default-features = false, features = ["gif", "jpeg", "png", "webp"] }
webp = "0.3"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# 工具
anyhow = "1"
thiserror = "1"
once_cell = "1"
chrono = "0.4"

[features]
default = []
