[package]
name = "jm-boom"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "jm_boom_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aes = "0.8"
base64 = "0.22"
ecb = { version = "0.1", features = ["alloc", "block-padding"] }
image = { version = "0.25", default-features = false, features = ["gif", "jpeg", "png", "webp"] }
md5 = "0.7"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "socks"], default-features = false }
tokio = { version = "1", features = ["rt", "time", "macros", "sync"] }
webp = "0.3.1"
